@@ -20,8 +20,8 @@ remove = Text::ParseWords
 remove = Scalar::Util
 remove = FindBin
 
-;[Prereqs]
-;Foo::Bar = 0
+[Prereqs]
+ExtUtils::CChecker = 0.09
 
 [Author::Plicease::Upload]
 cpan = 0
